chore: dependencies update

--- a/apps/resources/package.json
+++ b/apps/resources/package.json
@@ -26,8 +26,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@alx_rajic_auth/common": "workspace:^",
     "@ant-design/icons": "^5.4.0",
+    "@sec-authorize/common": "workspace:^",
     "@types/lodash": "^4.17.7",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.20.1",
