--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@alx_rajic_auth/common",
+  "name": "@sec-authorize/common",
   "author": "aleks.v.rajic@gmail.com",
   "version": "0.1.4",
   "type": "module",
