--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -16,7 +16,11 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-      # - run: yarn workspace @sec-authorize/mfe-resources build
-      - run: cd apps/resources &&  npm publish --provenance --access public
+      - run: yarn ci
+      - run: yarn workspace @sec-authorize/mfe-resources build
+      - name: Release
+#      - run: cd apps/resources &&  npm publish --provenance --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACC_TOK }}
+          NPM_TOKEN: ${{ secrets.NPM_ACC_TOK }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: yarn semantic-release
