--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: yarn ci
+      - run: yarn install --frozen-lockfile
       - run: yarn workspace @sec-authorize/mfe-resources build
       - name: Release
 #      - run: cd apps/resources &&  npm publish --provenance --access public
