--- a/apps/resources/package.json
+++ b/apps/resources/package.json
@@ -23,7 +23,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
