--- a/apps/resources/package.json
+++ b/apps/resources/package.json
@@ -24,7 +24,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "semantic-release": "semantic-release"
+    "release": "npx semantic-release"
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
