--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -23,4 +23,4 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_ACC_TOK }}
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: yarn workspace @sec-authorize/mfe-resources  semantic-release
+        run: yarn workspace @sec-authorize/mfe-resources release
