--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -18,8 +18,8 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: yarn install --frozen-lockfile
       - run: yarn workspace @sec-authorize/mfe-resources build
+      - run: cd apps/resources &&  npm publish --access public
       - name: Release
-#      - run: cd apps/resources &&  npm publish --provenance --access public
         env:
           NPM_TOKEN: ${{ secrets.NPM_ACC_TOK }}
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
