chore: update scopes

--- a/apps/resources/package.json
+++ b/apps/resources/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
-    "@sec-authorize/common": "workspace:^",
+    "@sec-auth/common": "workspace:^",
     "@types/lodash": "^4.17.7",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.20.1",
