--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -17,10 +17,10 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
       - run: yarn install --frozen-lockfile
-      - run: yarn workspace @sec-authorize/mfe-resources build
+      - run: yarn workspace @sec-auth/mfe-resources build
       - run: cd apps/resources &&  npm publish --access public
-      - name: Release
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_ACC_TOK }}
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: yarn workspace @sec-authorize/mfe-resources release
+      # - name: Release
+      #   env:
+      #     NPM_TOKEN: ${{ secrets.NPM_ACC_TOK }}
+      #     GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      #   run: yarn workspace @sec-auth/mfe-resources release
