--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -11,19 +11,16 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
-      # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
           scope: '@sec-auth'
-      - run: yarn install --frozen-lockfile
-      - run: yarn workspace @sec-auth/mfe-resources build
-      - run: cd apps/resources &&  npm publish --access public
+      - name: ⚙️ Install
+        run: yarn install --frozen-lockfile
+      - name: ⚒️ Build
+        run: yarn workspace @sec-auth/mfe-resources build
+      - name: 🚀 Release
+        run: cd apps/resources &&  npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ACC_TOK }}
-      # - name: Release
-      #   env:
-      #     NPM_TOKEN: ${{ secrets.NPM_ACC_TOK }}
-      #     GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      #   run: yarn workspace @sec-auth/mfe-resources release
